--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-rows: min-content auto;
-    margin: 0px;
+    margin: 5px 0px 0px 0px;
 }
 
 .main {
@@ -16,6 +16,20 @@ body {
     justify-content: center;
     align-items: center;
     gap: 25px;
+}
+
+.title {
+    font-size: 2.5em;
+    font-weight: bold;
+}
+
+.instruction-bar {
+    background-color: #e2e8f0;
+    height: min-content;
+    padding: 8px;
+    width: 25em;
+    border-radius: 5px;
+    margin-top: 5px;
 }
 
 button {
